Fixing the images getting cut off

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -920,7 +920,7 @@
 
 	.slider {
 		position: relative;
-		height: 25em;
+		height: 27em;
 	}
 
 		.slider .viewer {
